store/src/styles/sections/select-menu.scss
.hern-select-menu__main {
   margin: auto;
   padding-bottom: 24px;
   min-height: calc(100vh - 128px);
}

.hern-select-menu__loading {
   padding: 0.75rem;
}
.hern-select-menu__helper-bar {
   padding: 0.75rem;
}
.hern-select-menu__content {
   padding: 0 1rem;
   display: grid;
   gap: 2rem;
   grid-template-columns: 1fr 400px;
   @media (max-width: 768px) {
      grid-template-columns: 1fr;
   }
}

/**Week picker */

.hern-select-menu__week-picker__wrapper {
   position: fixed;
   z-index: 5;
   width: 100%;
   background: #fff;
   top: 148px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

.hern-select-menu__week-picker {
   display: flex;
   justify-content: center;
   margin: 32px 0;
}
.hern-select-menu__week-date {
   background-color: var(--hern-accent);
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   color: #fff;
   border-radius: 9999px;
   padding: 0.75rem 2rem;
   cursor: pointer;
   &:hover {
      opacity: 0.7;
   }
}

.hern-select-menu__week-picker__list {
   height: 64px;
   max-width: 980px;
   padding: 0 0.5rem;
   margin: 0px auto;
   overflow-x: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 12px;
   &::after,
   &::before {
      content: '';
   }

   &::-webkit-scrollbar {
      display: none;
   }

   @media (max-width: 1024px) {
      overflow: auto;
      white-space: nowrap;
   }
}
.hern-select-menu__week-picker__list-item {
   background-color: rgba(17, 130, 59, 0.05);
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
   color: rgba(17, 130, 59, 1);
   border-radius: 9999px;
   padding: 0.75rem 2rem;
   cursor: pointer;
   &:hover {
      opacity: 0.7;
   }
}
.hern-select-menu__week-picker__list-item--active {
   color: #fff;
   background-color: var(--hern-accent);
}

/*Skeleton*/
.hern-select-menu__skeleton {
   margin-top: 1rem;
   header {
      border-bottom-width: 1px;
      height: 2rem;
      margin-bottom: 0.75rem;
      span {
         width: 8.333333%;
         display: block;
         height: 2rem;
         background-color: rgba(243, 244, 246, 1);
      }
   }
   ul {
      display: grid;
      gap: 0.75rem;
      grid-template-rows: 220px;
      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   }
   li {
      padding: 0.5rem;
      display: flex;
      flex-direction: column;
      background: #fff;
      border-radius: 0.25rem;
      overflow: hidden;
      div {
         flex: 1 1 0%;
         background-color: rgba(243, 244, 246, 1);
      }
      footer {
         margin-top: 0.5rem;
         height: 2rem;
         background-color: rgba(243, 244, 246, 1);
      }
   }
}

/* category */
.hern-select-menu__category {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
   background-color: #fff;
   position: sticky;
   top: 212px;
   z-index: 1;
   padding: 16px 12px;
   max-width: calc(100vw - 465px);
   overflow-x: auto;
   &__btn {
      font-family: 'Inter';
      font-style: normal;
      font-weight: 600;
      font-size: 14px;
      line-height: 17px;
      color: rgba(51, 51, 51, 0.8);
      border-radius: 9999px;
      padding: 0.5rem 0.75rem;
      background-color: rgba(17, 130, 59, 0.2);
      margin-right: 12px;
      cursor: pointer;
      text-decoration: none;
      &:last-child {
         margin-right: 0;
      }
      &:hover {
         color: rgba(51, 51, 51, 0.8);
         opacity: 0.7;
      }
   }
   &__btn--active {
      background-color: var(--hern-accent);
      color: #fff;
      &:hover {
         color: #fff;
         opacity: 0.7;
      }
   }
   &::-webkit-scrollbar {
      display: none;
   }

   @media (max-width: 768px) {
      max-width: calc(100vw - 32px);
   }
}

.hern-select-menu__category-two {
   @extend .hern-select-menu__category;
   top: 48px;
}

/*Menu*/
.hern-select-menu__menu {
   margin-bottom: 2rem;
}
.hern-select-menu__menu__helper-bar {
   padding-top: 1rem;
}
.hern-select-menu__menu__category-name {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
   font-size: 1.563rem;
   color: rgba(51, 51, 51, 0.8);
   margin: 1.25rem 0 1.25rem 0;

   @media (max-width: 768px) {
      font-size: 1.125rem;
   }
}

.hern-select-menu__menu__products {
   display: grid;
   gap: 1.25rem;
   grid-template-columns: repeat(auto-fill, minmax(236px, 1fr));
}

.hern-select-menu__menu__product {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: #fff;
   border-radius: 1.25rem;
   overflow: hidden;
   box-shadow: 0px 1px 5px rgb(0 0 0 / 8%);
}
.hern-select-menu__menu__product--active {
   border: 2px solid var(--hern-accent);
}
.hern-select-menu__menu__product__img {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgba(229, 231, 235, 1);
   margin-bottom: 0.969rem;
   border-radius: 20px 20px 0px 0px;
   overflow: hidden;
   cursor: pointer;
   position: relative;
   padding-bottom: calc(3 / 4 * 100%);
   > img {
      position: absolute;
      height: 100%;
      width: 100%;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
   }
}

.hern-select-menu__menu__product__type {
   position: absolute;
   top: 8px;
   right: 8px;
   z-index: 1;
}
.hern-select-menu__menu__product__type__img {
   height: 1.5rem;
   width: 1.5rem;
}
.hern-select-menu__menu__product__add-on-label {
   top: 16px;
   padding: 3px 6px;
   position: absolute;
   border-radius: 0px 2px 2px 0px;
   background: rgba(51, 51, 51, 0.6);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   font-size: 0.875rem;
   text-transform: capitalize;
   font-weight: 500;
   color: #ffffff;
   letter-spacing: 0.05em;
}
/* ... */

